# ocr-autoresearch

./: .gitignore  NOTICE.md  README.md  campaign.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
